# rkllm_talking

./: CMakeLists.txt  README.md  build-linux.sh  main.cpp  speech_to_text.cpp  speech_to_text.h  text_to_Speech.cpp  text_to_Speech.h
